# rust_web_server

./: .env.example  Cargo.toml  LICENSE  rustfmt.toml
src/: app.rs  lib.rs  main.rs
src/config/: env.rs
src/errors/: auth.rs  db.rs  mod.rs  response.rs  types.rs  validation.rs
src/middlewares/: rate_limiter.rs
src/routes/v1/: auth_routes.rs  mod.rs
src/utils/: cors.rs  db.rs  db_util.rs  logger.rs  mod.rs
src/validators/: env_validator.rs  mod.rs
