[package]
name = "web_server"
version = "0.1.0"
edition = "2021"

[dependencies]
actix-web = "4.4.0"
tokio = { version = "1.33.0", features = ["full"] }
dotenv = "0.15.0"
serde = { version = "1.0.218", features = ["derive"] }
serde_json = "1.0.139"
thiserror = "2.0.11"
validator = { version = "0.20.0", features = ["derive"] }
mongodb = "3.2.1"
futures = "0.3.31"
